deployment/namespace.yaml
#@ load("@ytt:data", "data")
#@ namespace = "yugioh-card-puller-{}".format(data.values.env)
---
apiVersion: v1
kind: Namespace
metadata:
  name: #@ namespace
