deployment/frontend.yaml
#@ load("@ytt:data", "data")

#@ namespace = "yugioh-card-puller-{}".format(data.values.env)
#@ app = "yugioh-card-puller-frontend-{}".format(data.values.env)

#@ env = data.values.env
#@ image = data.values.image
#@ port = 80

#@ def labels():
  app: #@ app
#@ end
---
apiVersion: v1
kind: Namespace
metadata:
  name: #@ namespace
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: #@ namespace
  name: #@ "{}-deployment".format(app)
  labels: #@ labels()
spec:
  metadata:
    namespace: #@ namespace
  replicas: 1
  selector:
    matchLabels: #@ labels()
  template:
    metadata:
      namespace: #@ namespace
      labels: #@ labels()
    spec:
      containers:
        - name: nginx-instance-frontend
          image: #@ image
---
kind: Service
apiVersion: v1
metadata:
  namespace: #@ namespace
  name: #@ "yugioh-card-puller-frontend"
spec:
  type: LoadBalancer
  selector: #@ labels()
  ports:
    - port: #@ port
